[tool.poetry]
name = "dynamic_sse"
version = "0.1.0"
description = ""
authors = ["Elahe <1997.esm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.1"
cryptography = "^39.0.0"
numpy = "^1.24.1"
python-dotenv = "^0.21.1"
py2puml = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
